2002-03-29  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* providers/postgres/gda-postgres-provider.c (process_sql_commands):
	One-liner to solve bug #74404.

2002-03-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/default/gda-default-provider.c (get_table_fields):
	implemented SCHEMA_FIELDS schema.

	* libgda/gda-xml-database.[ch] (gda_xml_database_find_table): new
	function.

	* libgda/gda-server-connection.[ch]
	(gda_server_connection_add_error_string): allow variable list of
	arguments, to format the string to be used for the error.

	* libgda/gda-util.[ch] (gda_type_to_string): new function.
	(gda_type_from_string): new function.

2002-03-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/mysql/gda-mysql-provider.c (get_table_fields): implemented
	SCHEMA_FIELDS schema.

	* libgda/gda-server-connection.c (impl_Connection_getSchema): clean
	up error list after sending it to clients via the CORBA_Environment.
	(impl_Connection_close): ditto.
	(impl_Connection_beginTransaction): ditto.
	(impl_Connection_commitTransaction): ditto.
	(impl_Connection_rollbackTransaction): ditto.
	
2002-03-25  Wang Jian  <lark@linux.net.cn>

	* configure.in: Added "zh_CN" to ALL_LINGUAS.

2002-03-25  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* providers/postgres/gda-postgres-provider.c: for SCHEMA_FIELDS,
	return postgres data type names, not GDA ones.

2002-03-25  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* providers/postgres/gda-postgres-provider.c:
	* providers/postgres/gda-postgres.h:
	* providers/postgres/utils.c: the data type column is now a string
	containing the type name. Closes #76128.

2002-03-24  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-util.c (gda_file_save): use gnome_vfs_create_uri, or
	it will only work if the file already exists.

	* providers/mysql/gda-mysql-recordset.c (fetch_func): make sure
	we don't pass over NULL or unitialized pointers to ORBit.

	* providers/mysql/gda-mysql-provider.c (get_mysql_aggregates):